--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	Welcome to the new Era of Artificial intelligence
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
