--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	Welcome to the new Era of Artificial intelligence
+<center><h1>Welcome to the new Era of Artificial intelligence</h1></center>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
